# haralyzer-api-v2

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
haralyzer_api/: asgi.py  settings.py  urls.py  wsgi.py
scans/: apps.py  models.py  serializers.py  urls.py  views.py
scans/controllers/: har.py
scans/migrations/: 0001_initial.py  0002_scan_name_alter_scan_har_file_alter_scan_status.py  0003_scanresult.py  0004_remove_scan_har_file_scanresult_audio_load_time_and_more.py  0005_remove_scanresult_content_load_time.py  0006_scan_hostname.py
